.. -*- mode: rst -*- vim: ft=rst

.. _cmake-release-notes:
   
Release Notes
=============

trunk
-----

* Provide better support for running in virtual enviroments
  the differ from the build environment.
* Disable HDF5 file locking by default. 

Feb. 5, 2020 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-01

* Prefer I3_DATA if it's set.

Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-00

* Clean up documentation, fixing urls, stripping ancient history
* Update geant4
* Update cppzmq
* Update gsl detection for tarballs
* Update Minuit2 detection
* Update parasite project variables
* Update "meta info" collection and variables
* Declare "highlander" to be "combo/trunk"

V18-12-00 - December 11, 2018, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------------------
* New cvmfs genie detection.
* made OpenCL detection a little more robust.
* added EXPECT_THROW macro.

V18-06-00 - June 13, 2018, Alex Olivas  (olivas@icecube.umd.edu)
----------------------------------------------------------------
* add boost-python detection for boost 1.67
* add default value for I3_TESTDATA
* min cmake version is now 3.2.2
* updated genie detection
* geant4 detection is python3 compatible.
* remove support for SLALIB

V17-11-00 - November 15, 2017, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------------------

V17-05-00 - May 9, 2017, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------------
* support for zstd

V17-05-01 - May 18, 2017, Alex Olivas  (olivas@icecube.umd.edu)
---------------------------------------------------------------
* incremental release. 

V17-05-02 - June 28, 2017, Alex Olivas  (olivas@icecube.umd.edu)
----------------------------------------------------------------
* enforce C++11
