@@ -107,13 +107,6 @@ if [[ "${_GEANT4_FOUND}" == "TRUE" ]]; then
 	_DYLD_LIBRARY_PATH=${_DYLD_LIBRARY_PATH}:${GEANT4_LIBRARY_DIR}
     fi
 fi
-_LOG4CPP_FOUND=@LOG4CPP_FOUND@
-if [[ "${_LOG4CPP_FOUND}" == "TRUE" ]]; then
-    if [[ -d ${LOG4CPP_LIBRARY_DIR} ]]; then
-	_LD_LIBRARY_PATH=${_LD_LIBRARY_PATH}:${LOG4CPP_LIBRARY_DIR}
-	_DYLD_LIBRARY_PATH=${_DYLD_LIBRARY_PATH}:${LOG4CPP_LIBRARY_DIR}
-    fi
-fi
 fi
 
 _LD_LIBRARY_PATH=${_LD_LIBRARY_PATH}:$LD_LIBRARY_PATH
