@@ -1,8 +1,0 @@
-TOOLDEF (log4cpp
-  include/log4cpp-1.0
-  log4cpp/Category.hh
-  lib/log4cpp-1.0
-  NONE
-  log4cpp
-  )
-
